--- a/Report.tex
+++ b/Report.tex
@@ -1,3 +1,6 @@
+\PassOptionsToPackage{unicode=true}{hyperref} % options for packages loaded elsewhere
+\PassOptionsToPackage{hyphens}{url}
+%
 \documentclass[]{article}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
@@ -6,29 +9,32 @@
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
+  \usepackage{textcomp} % provides euro and other symbols
 \else % if luatex or xelatex
-  \ifxetex
-    \usepackage{mathspec}
-  \else
-    \usepackage{fontspec}
-  \fi
+  \usepackage{unicode-math}
   \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
 \fi
 % use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 % use microtype if available
 \IfFileExists{microtype.sty}{%
-\usepackage{microtype}
+\usepackage[]{microtype}
 \UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
 }{}
-\usepackage[margin=1in]{geometry}
+\IfFileExists{parskip.sty}{%
+\usepackage{parskip}
+}{% else
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{6pt plus 2pt minus 1pt}
+}
 \usepackage{hyperref}
-\hypersetup{unicode=true,
-            pdftitle={Project2: Breast Cancer Prediction Model},
+\hypersetup{
+            pdftitle={Project 2: Breast Cancer Prediction Model},
             pdfauthor={Group 7: Melanie Mayer, Yuqi Miao, Sibei Liu, Xue Jin},
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
+\usepackage[margin=1in]{geometry}
 \usepackage{graphicx,grffile}
 \makeatletter
 \def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
@@ -38,12 +44,6 @@
 % margins by default, and it is still possible to overwrite the defaults
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
-\IfFileExists{parskip.sty}{%
-\usepackage{parskip}
-}{% else
-\setlength{\parindent}{0pt}
-\setlength{\parskip}{6pt plus 2pt minus 1pt}
-}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
@@ -58,38 +58,21 @@
 \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
 \fi
 
-%%% Use protect on footnotes to avoid problems with footnotes in titles
-\let\rmarkdownfootnote\footnote%
-\def\footnote{\protect\rmarkdownfootnote}
+% set default figure placement to htbp
+\makeatletter
+\def\fps@figure{htbp}
+\makeatother
 
-%%% Change title format to be more compact
-\usepackage{titling}
 
-% Create subtitle command for use in maketitle
-\providecommand{\subtitle}[1]{
-  \posttitle{
-    \begin{center}\large#1\end{center}
-    }
-}
-
-\setlength{\droptitle}{-2em}
-
-  \title{Project2: Breast Cancer Prediction Model}
-    \pretitle{\vspace{\droptitle}\centering\huge}
-  \posttitle{\par}
-    \author{Group 7: Melanie Mayer, Yuqi Miao, Sibei Liu, Xue Jin}
-    \preauthor{\centering\large\emph}
-  \postauthor{\par}
-      \predate{\centering\large\emph}
-  \postdate{\par}
-    \date{March 31, 2020}
-
+\title{Project 2: Breast Cancer Prediction Model}
+\author{Group 7: Melanie Mayer, Yuqi Miao, Sibei Liu, Xue Jin}
+\date{March 31, 2020}
 
 \begin{document}
 \maketitle
 
 \hypertarget{introduction}{%
-\subsection{Introduction}\label{introduction}}
+\subsubsection{Introduction}\label{introduction}}
 
 Breast cancer is the most common invasive cancer and the second leading
 cause of death from cancer in women worldwide, marked by the
@@ -101,7 +84,7 @@ medical treatment, rehabilitation and personal matters can be made
 appropriately.
 
 \hypertarget{objectives}{%
-\subsection{Objectives}\label{objectives}}
+\subsubsection{Objectives}\label{objectives}}
 
 The main objective of this project is to build an accurate predictive
 model based on logistic regression that classifies between malignant and
@@ -113,13 +96,13 @@ and the lasso model respectively. We aim to find the model with the best
 performance in terms of predicting when breast tissue is malignant.
 
 \hypertarget{breast-cancer-diagnosis-dataset}{%
-\subsection{Breast Cancer Diagnosis
+\subsubsection{Breast Cancer Diagnosis
 Dataset}\label{breast-cancer-diagnosis-dataset}}
 
-The Breast Cancer Diagnosis dataset contains the diagnosis and a set of
-10 features capturing the characteristics of the cell nuclei present in
-the digitized image of breast mass. The ten features collected for each
-cell nucleus are:
+The Breast Cancer Diagnosis dataset, with 569 observations, contains the
+diagnosis and a set of 10 features capturing the characteristics of the
+cell nuclei present in the digitized image of breast mass. The ten
+features collected for each cell nucleus are:
 
 \begin{itemize}
 \tightlist
@@ -154,10 +137,10 @@ will also create models with all 30 predictors however, these results
 will be reported in the supplement section.
 
 \hypertarget{methods}{%
-\subsection{Methods}\label{methods}}
+\subsubsection{Methods}\label{methods}}
 
 \hypertarget{model-parameters}{%
-\subsubsection{Model Parameters}\label{model-parameters}}
+\paragraph{Model Parameters}\label{model-parameters}}
 
 For logistic regression we assume the response variable \(Y_i\) for the
 \(i_{th}\) observation follows a binary distribution:
@@ -170,6 +153,7 @@ function for the vector \(\boldsymbol\pi\) can be written as:
 \[L(\boldsymbol\pi)=\prod_{i=1}^n f(y_i)=\prod_{i=1}^n\pi_i^{y_i}(1 - \pi_i)^{1-y_i}\]
 
 For logistic regression, the logit link function is used:
+
 \[\log(\frac{\pi_i}{1-\pi_i}) = \boldsymbol \beta ^T\boldsymbol x_i = \theta_i\]
 where
 \(\boldsymbol x_i^T = \begin{bmatrix} 1 & x_{1i} &x_{2i} & ... & x_{pi} \end{bmatrix}\)
@@ -192,7 +176,7 @@ The Hessian matrix is thus:
 \[\nabla^2 l(\boldsymbol\theta|\boldsymbol X) = -\sum_{i=1}^n \pi_i(1 - \pi_i)\boldsymbol x_i\boldsymbol x_i^T = -\boldsymbol X^Tdiag(\pi_i(1 - \pi_i)) \boldsymbol X\]
 
 \hypertarget{full-model}{%
-\subsubsection{Full model}\label{full-model}}
+\paragraph{Full model}\label{full-model}}
 
 In order to estimate \(\boldsymbol \beta\) we need to maximize the
 loglikelihood function. There is no closed form, hence we turn to
@@ -210,22 +194,23 @@ modification coefficient to ensure the aescent direction of the
 iteration vector at \(\theta_{i}\).
 
 \hypertarget{logit-lasso-pathwise-coordinate-wise-update-algorithm}{%
-\subsubsection{Logit-lasso pathwise coordinate-wise update
-algorithm}\label{logit-lasso-pathwise-coordinate-wise-update-algorithm}}
+\paragraph{Logit-lasso Pathwise Coordinate-wise Update
+Algorithm}\label{logit-lasso-pathwise-coordinate-wise-update-algorithm}}
 
-In the case of large dimensionality of predictors or multicollinearity
+In the case of large dimensionality or multicollinearity of predictors
 it can be beneficial to perform a regularization method which shrinks
 coefficients and can perform variable selection. Here we implement the
 Least Absolute Shrinkage and Selection Operator (LASSO) method for
 logistic regression with a path-wise coordinate-wise optimization
 algorithm to select variables from the full model, increase the
-prediction efficiency and avoid overfitting. With the large model, we
-have 30 predictors describing 10 features, hence we are likely to
+prediction efficiency and avoid overfitting. With the ten predictor
+model, LASSO may not be as beneficial compared to the 30 predictor model
+where we have 30 predictors describing 10 features hence are likely to
 experience multicollinearity and expect LASSO to outperform the
 classical logistic regression.
 
-In LASSO we add an L1 penalization term to the squared loss function,
-such that we try to find the coefficients to minimize:
+In LASSO we add an L1 penalization term to the loss function, such that
+we try to find the coefficients to minimize:
 
 \[min _{(\boldsymbol \beta)}\{-l({\boldsymbol \beta})+\lambda\sum_{j=0}^{p}|\beta_j| \}\]
 With the pathwise coordinate-wise update algorithm, we find the
@@ -240,15 +225,17 @@ where,
 
 One must pre-define the tuning parameter sequence
 \(\{\lambda_1,...,\lambda_s\}\) and a starting vector
-\({\boldsymbol{\beta_{start=}}}\{\beta_0^{(0)},...,\beta_p^{(0)}\}\). To
-imptove efficienct, it is best to define
-\(max{(\boldsymbol \lambda)} = max(\boldsymbol\beta)\) where
+\({\boldsymbol{\beta_{start=}}}\{\beta_0^{(0)},...,\beta_p^{(0)}\}\).
+When choosing the sequence of lambdas, it is best to define
+\(max{(\boldsymbol \lambda)} = max(\boldsymbol\beta)\), where
 \(\boldsymbol\beta\) refers to the estimated coefficients from the
-previous iteration. The optimal process for each \(\lambda_u\) is then
-found by using the optimal \(\boldsymbol {\beta_{u-1}}\) from the
-previous iteration as a warm start. Within every iteration find the
-optimal \(\beta\) coordinate-wise, that is minimize over one parameter
-at a time while keeping all others fixed.
+logistic regression, such that all coefficients will shrink to zero. The
+optimal process for each \(\lambda_u\) is then found by using the
+optimal \(\boldsymbol {\beta_{u-1}}\) from the previous iteration as a
+warm start in order to reach the optimal values quicker. Within every
+iteration for each lambda, the optimal \(\boldsymbol \beta\) is searched
+using coordinate-wise updating, that is it is minimized over one
+parameter at a time while keeping all others fixed.
 
 For \(\beta_j\) in \(t_{th}\) iteration
 
@@ -260,30 +247,43 @@ For \(\beta_j\) in \(t_{th}\) iteration
 \hypertarget{cross-validation}{%
 \paragraph{Cross Validation}\label{cross-validation}}
 
-In order to check the model performance, we use 5-fold cross validation.
-Using training dataset to choose the best tuning parameter and fit
-model, and using test dataset to evaluate the final prediction. The
-statistics we use to compare the validation is SSE and pearson
-chi-square statistics, which are defined as:
+In order to find the optimal lambda, we use 5-fold cross validation. The
+dataset is divided into five subdatasets. The optimal coefficients is
+then found five times by running the logit-LASSO on a combination of
+four of the five subsets, leaving a different subset out each time. The
+subset left out is then used to estimate the model performance. This is
+done for all lambdas in the pre-defined sequence in order to search for
+the lambda with the highest average predictive ability. The statistics
+we use to compare predictive ability is SSE and pearson chi-square
+statistic. SSE is defined as:
 
-\[SSE = \sum_{i=1}^{n}(y_i-{\widehat \pi_i})^2\]
-\[{\widehat \pi_i} = log\frac{exp({\boldsymbol X_i\beta})}{1+exp({\boldsymbol X_i\beta})}\]
+\[SSE = \sum_{i=1}^{n}(y_i-{\widehat \pi_i})^2\] where
+\({\widehat \pi_i} = log\frac{exp({\boldsymbol X_i\beta})}{1+exp({\boldsymbol X_i\beta})}\).
+Pearson chi-square statistic is defined as:
 \[G = \sum_{i=1}^{n}\frac{y_i-{\widehat \pi_i}}{{\widehat \pi_i}(1-{\widehat \pi_i})}\]
 
-By taking average of above 2 statistics of 5 fold, we get the final
-index to evaluate the model fitting.
+We want both of these statistics to be minimized. By taking the average
+of the above statistics over the value found for each of the five folds,
+we get a value to evaluate the model fit for each lambda.
 
 \hypertarget{results}{%
-\subsection{Results}\label{results}}
+\subsubsection{Results}\label{results}}
 
-\hypertarget{newton-raphson}{%
-\subsubsection{Newton-Raphson}\label{newton-raphson}}
+\hypertarget{logistic-regression-model}{%
+\paragraph{Logistic Regression Model}\label{logistic-regression-model}}
 
-After doing the Newton-Raphson modified with step and direction, the
-estimation of 10 coefficients of means are in table 1 which are
-consistant with the results from glm function. When mean, SD and largest
-values of 30 features are included, the estimation of all 30 features
-are in Supplementary table1.
+The results from the logistic model estimated using the modified
+Newton-Raphson algorithm with step-halving and gradient ascent can be
+found in Table 1. Here we are showing the results when only using the
+means of the ten features as predictors. We found average area had the
+largest coefficient. For a one unit increase in the average area of the
+tissue, we expect to see a change in the log odds of having a malignant
+tutor of 14, holding all other predictors constant. The predictors were
+all standardized so caution must be used when analyzing these
+coefficients however, this seems to be very high however. The smallest
+coefficient, -7.22, was estimated for average radius. The results from
+logistic regression using the mean, SD and largest values of the 10
+features (30 predictors) are shown in Supplementary Table 1.
 
 \begin{center}
 \includegraphics{./results/NR.JPG}
@@ -293,15 +293,15 @@ are in Supplementary table1.
 Table 1. Estimated coefficients of 10 mean features under Newton-Raphson method
 \end{center}
 
-\hypertarget{coordinate-wise}{%
-\subsubsection{Coordinate-Wise}\label{coordinate-wise}}
+\hypertarget{logistic-lasso-model}{%
+\paragraph{Logistic-LASSO Model}\label{logistic-lasso-model}}
 
-The range of \(\lambda\) we tried is (3,0) with length 100. The initial
-guess of all \(\beta\) including the intercept is 0.02. The
-g.statistics, SSE, AUC are introduced to select best \(\lambda\) in
-Cross Validation. The optimal \(\lambda\) would be selected based on the
-minimum SSE, maxmimum AUC and minimum g-statistics in test data. Below
-is the results in 5-Fold Cross Validation:
+The sequence of \(\lambda\) we compared ranged from three to zero, with
+a length of 100. The pre-defined values for all \(\beta\) coefficients
+including the intercept was 0.02. The optimal \(\lambda\) was selected
+based on the minimum SSE, maxmimum AUC and minimum g-statistics
+estimated on the test dataset. The results from each of the five folds
+can be found in Table 2.
 
 \begin{center}
 \includegraphics{./results/Results from Yuqi.JPG}
@@ -311,53 +311,63 @@ is the results in 5-Fold Cross Validation:
 Table 2. Cross validatin results in each fold
 \end{center}
 
-In all 5 folds, all three critria indicates the same optimal
-\(\lambda\), whcih is 0. In the test data of each fold, the AUC ranges
-from 0.99 to 0.97, g-statistics ranges from 22.6 to 48.0, while SSE
-changes from 4.1 to 6.8.
+We find the results are consistant across all five folds based on all
+three statistics. The optimal \(\lambda\) appears to be zero. This
+implies the L1 penalization term added to the loss function is not
+effecting our model. Using the test data of each fold, the AUC ranges
+from 0.99 to 0.97, the g-statistic ranges from 22.6 to 48.0, while SSE
+ranges from 4.1 to 6.8.
 
 \begin{center}
 \includegraphics{./results/lambda_change.jpeg}
 \end{center}
 
 \begin{center}
-Fig 1. Changes in three criteria vs $\lambda$
+Fig 1. Changes in three criteria over range of $\lambda$
 \end{center}
 
-The Figure 1 shows the trend of AUC SSE and g-statistics in train data.
-With the increse of \(\lambda\), both SSE and g-statistics have a
-dramatic soar. While AUC has a great drop from 1 to 0.5. All of them
-indicate that the bigger the \(\lambda\) is, the worse the model would
-perform.
+Figure 1 shows the trend in AUC, SSE and g-statistic over the range of
+lambdas tested. With the increase of \(\lambda\), both SSE and
+g-statistics have a dramatic increase and become constant around 0.4.
+AUC decreases drastically from 1 to 0.4. All of them indicate that the
+bigger the \(\lambda\) is, the worse the model performs.
 
-Since the optimal \(\lambda\)=0, none of the coefficients of
-logistic-lasso is shrank into 0 as in Table 3.
+Since the optimal \(\lambda\) = 0, none of the coefficients of the
+logistic-lasso is shrunk to zero, as seen in Table 3. The coefficient
+terms are much smaller compared to those estimated by the classic
+logistic regression however.
 
 \begin{center}
 \includegraphics{./results/10 coed when lambd=0.png}
 \end{center}
 
 \begin{center}
-Table 3. Coefficients in final model in Cross Validation
+Table 3. Coefficients of final logistic-LASSO model using cross validation
 \end{center}
 
-If total 30 features are considered, the corresponding Cross Validation
-results in each fold is in Supplementary table2. The optimal \(\lambda\)
-under that scenario is 0.03, which shrinks about 20 coefficients into 0
-as presented in Supplementary table3.
+The results when all 30 predictors are considered, and their
+corresponding Cross Validation results in each fold, are shown in
+Supplementary Table 2. The optimal \(\lambda\) under that scenario is
+0.03, which shrinks about 20 coefficients to 0, as presented in
+Supplementary Table 3.
 
 \hypertarget{discussion}{%
-\subsection{Discussion}\label{discussion}}
+\subsubsection{Discussion}\label{discussion}}
 
-\hypertarget{supplementary}{%
-\subsection{Supplementary}\label{supplementary}}
+When attempting to estimate a binary outcome, there are many other
+models which could have been used. We could have compared our results to
+other generalized linear models using a probit or complementary log-log
+link function.
+
+\hypertarget{supplement}{%
+\subsubsection{Supplement}\label{supplement}}
 
 \begin{center}
 \includegraphics{./results/coef in NR of all 30 predictors.png}
 \end{center}
 
 \begin{center}
-Supplementary Table1: Estimated coefficients of 30 features under Newton-Raphson method
+Supplementary Table  1: Estimated coefficients of 30 features under Newton-Raphson method
 \end{center}
 
 \begin{center}
@@ -365,7 +375,7 @@ Supplementary Table1: Estimated coefficients of 30 features under Newton-Raphson
 \end{center}
 
 \begin{center}
-Supplementary Table2: Estimated coefficients of 30 features in each fold of Cross Validation
+Supplementary Table 2: Estimated coefficients of 30 features in each fold of Cross Validation
 \end{center}
 
 \begin{center}
@@ -373,8 +383,7 @@ Supplementary Table2: Estimated coefficients of 30 features in each fold of Cros
 \end{center}
 
 \begin{center}
-Supplementary Table3: Estimated coefficients of 30 features in final model in Cross Validation
+Supplementary Table 3: Estimated coefficients of 30 features in final model in Cross Validation
 \end{center}
-
 
 \end{document}
